added AppCongig.java and few alterations in app.prop